Fix layout bugs and add minor updates

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
     font-size: 20px;
   font-family: "Lora", serif;
   font-weight: 100;
-
+    cursor: pointer;
  }
  
   .header-links nav ul{
@@ -52,7 +52,6 @@ margin-left: 10px;
 font-size: 15px;
 text-decoration: none;
 border-radius: 15px;
-transition: color 0.3s;
  }
  .header-links a:hover {
     background-color: darkgreen;
@@ -108,11 +107,14 @@ transition: color 0.3s;
     width: 130px;
     height: 40px;
     padding: 10px;
-
+transition: all 0.8s;
  }
  .btn-home-page a:hover{
    background-color: #00c600;
    color: #c6ffc6;
+ }
+ .btn-home-page::before{
+   height: 100%;
  }
  .slideshow {
   position: relative;
@@ -161,15 +163,59 @@ transition: color 0.3s;
 .products-cards{
 display: flex;
 justify-content: center;
+align-items: center;
 flex-wrap: wrap;
 }
 .cards{
- background-color:#033d03;
-border-radius: 10px;
-   height: 350px;
-   width: 260px;
-   margin: 10px;
+   display: flex;
+   flex-direction: column;
+   background-color: #033d03;
+border-radius: 5px;
+   height: 490px;
+   width: 280px;
+   padding: 5px;
+   margin: 3px;
+   justify-content: center;
+   align-items: center;
+   overflow: hidden;
+   border: solid 1px #e0e0e0;
 }
+.cards img{
+   display: block;
+   width: 100%;
+   height: 70%;
+   margin: 0px auto;
+   border-radius: 3px;
+   object-fit: cover;
+
+}
+.cards-info{
+   margin: 4px;
+   justify-content: center;
+   align-items: center;
+}
+.cards-name{
+    font-family: "Oswald", sans-serif;
+   font-size: 17px;
+   font-weight: normal;
+   color: white;
+}
+.btn-cart{
+    color: #c6ffc6;
+    background-color: #00c600;
+     font-family: "Momo Trust Display", sans-serif;
+    font-size: 15px;
+    border-radius: 15px;
+    width: 130px;
+    height: 40px;
+    padding: 10px;
+    margin: 8px;
+transition: all 0.5s;
+}
+.btn-cart:hover{
+   background-color: white;
+   color: #033d03;
+ }
 #contact{
     background-color: #033d03;
    color: white;
@@ -186,6 +232,7 @@ h5{
    justify-content: center;
    text-align: center;
    padding:  20px 0 30px 0;
+   cursor: default;
 }
 
 .contact-icon-left {
